@@ -6,6 +6,7 @@
 - Fixed some placement issues with silences in printed scores
 - Minor fixes in new OSX player code
 - Improved note beaming in score editor when using multiple time signatures
+- Improved the pause feature to not affect the song start measure
 
 1.3 beta 1
 - Intensive code refactoring and cleanup
